--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: file LICENSE
 Encoding: UTF-8
 BugReports: https://github.com/vthorrf/gbggm/issues
 RoxygenNote: 7.1.1
-Imports: Rcpp (>= 1.0.11)
+Imports: Rcpp (>= 1.0.11),
+	 igraph (>= 1.5.0.1)
 Depends: YABS (>= 0.2.0)
 LinkingTo: Rcpp,
            RcppArmadillo
