--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,13 +1,12 @@
-#exportPattern("^[[:alpha:]]+")
 useDynLib(gbggm, .registration=TRUE)
-exportPattern("bega")
+exportPattern("bggm")
+exportPattern("corp")
 exportPattern("d3t")
 exportPattern("dhalfcauchy")
 exportPattern("dhalfnorm")
 exportPattern("dlaplace")
 exportPattern("dlomax")
 exportPattern("dmnorm")
-exportPattern("gbggm")
 exportPattern("pcor")
 exportPattern("tr")
 importFrom("igraph", "graph_from_adjacency_matrix", "cluster_louvain")
