--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Encoding: UTF-8
 BugReports: https://github.com/vthorrf/gbggm/issues
 RoxygenNote: 7.1.1
 Imports: Rcpp (>= 1.0.11),
-	 igraph (>= 1.5.0.1)
+	 igraph (>= 1.5.0.1),
+	 MASS (>= 7.3-60)
 Depends: YABS (>= 0.2.0)
 LinkingTo: Rcpp,
            RcppArmadillo
