--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,6 @@ exportPattern("pcor")
 exportPattern("tr")
 importFrom("igraph", "graph_from_adjacency_matrix", "cluster_louvain")
 importFrom("Rcpp", "evalCpp")
-importFrom("stats", "dcauchy", "dlogis", "dnorm", "pgamma", "qnorm", "rnorm", "dbeta", "pnorm", "runif")
+importFrom("stats", "dcauchy", "dlogis", "dnorm", "pgamma", "integrate", "qnorm", "rnorm", "dbeta", "pnorm", "runif")
 importFrom("YABS", "MCMC")
 importFrom("MASS", "mvrnorm")
