--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ exportPattern("corp")
 exportPattern("d3t")
 exportPattern("dhalfcauchy")
 exportPattern("dhalfnorm")
+exportPattern("dhypersec")
+exportPattern("dkaniadakis")
 exportPattern("dlaplace")
 exportPattern("dlomax")
 exportPattern("dmnorm")
+exportPattern("dNEG")
 exportPattern("pcor")
 exportPattern("tr")
 importFrom("igraph", "graph_from_adjacency_matrix", "cluster_louvain")
@@ -14,3 +17,4 @@ importFrom("Rcpp", "evalCpp")
 importFrom("stats", "dcauchy", "dlogis", "dnorm", "pgamma", "integrate", "qnorm", "rnorm", "dbeta", "pnorm", "runif")
 importFrom("YABS", "MCMC")
 importFrom("MASS", "mvrnorm")
+importFrom("Matrix", "rankMatrix")
